tests/recheck_cancel_optional_chain/recheck_cancel_optional_chain.exp
Error ------------------------------------------------------------------------------------------------------ foo.js:3:22

Cannot assign `123` to `foo` because number [1] is incompatible with boolean [2]. [incompatible-type]

   foo.js:3:22
   3| const foo: boolean = 123;
                           ^^^ [1]

References:
   foo.js:3:12
   3| const foo: boolean = 123;
                 ^^^^^^^ [2]



Found 1 error

Worker panicked on canceled recheck? No
